WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217164
stress/put-private-name-invalid-define.js.ftl-eager is getting flaky failure
https://bugs.webkit.org/show_bug.cgi?id=217164
Summary
stress/put-private-name-invalid-define.js.ftl-eager is getting flaky failure
Yusuke Suzuki
Reported
2020-09-30 20:53:46 PDT
https://ews-build.webkit.org/#/builders/1/builds/23496
Attachments
Patch
(2.77 KB, patch)
2020-10-01 04:27 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-09-30 20:54:08 PDT
stress/put-private-name-invalid-define.js.ftl-eager: test_script_38643: line 2: 58813 Segmentation fault: 11 ( "$@" ../../.vm/JavaScriptCore.framework/Helpers/jsc --useFTLJIT\=false --useFunctionDotArguments\=true --validateExceptionChecks\=true --useDollarVM\=true --maxPerThreadStackUsage\=1572864 --allowUnsupportedTiers\=true --usePrivateClassFields\=true --airForceBriggsAllocator\=true --useRandomizingExecutableIslandAllocation\=true --forcePolyProto\=true --useFTLJIT\=true --thresholdForJITAfterWarmUp\=10 --thresholdForJITSoon\=10 --thresholdForOptimizeAfterWarmUp\=20 --thresholdForOptimizeAfterLongWarmUp\=20 --thresholdForOptimizeSoon\=20 --thresholdForFTLOptimizeAfterWarmUp\=20 --thresholdForFTLOptimizeSoon\=20 --thresholdForOMGOptimizeAfterWarmUp\=20 --thresholdForOMGOptimizeSoon\=20 --maximumEvalCacheableSourceLength\=150000 --useEagerCodeBlockJettisonTiming\=true --repatchBufferingCountdown\=0 --collectContinuously\=true --useGenerationalGC\=false put-private-name-invalid-define.js ) stress/put-private-name-invalid-define.js.ftl-eager: ERROR: Unexpected exit code: 139 FAIL: stress/put-private-name-invalid-define.js.ftl-eager
Yusuke Suzuki
Comment 2
2020-10-01 04:27:45 PDT
Created
attachment 410218
[details]
Patch
Caio Lima
Comment 3
2020-10-01 04:33:55 PDT
Comment on
attachment 410218
[details]
Patch Informal r+.
Mark Lam
Comment 4
2020-10-01 11:07:12 PDT
Comment on
attachment 410218
[details]
Patch r=me
EWS
Comment 5
2020-10-01 11:52:40 PDT
Committed
r267846
: <
https://trac.webkit.org/changeset/267846
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410218
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-10-01 11:59:53 PDT
<
rdar://problem/69847001
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug